[package]
name = "pact_verifier_cli"
version = "1.0.2"
authors = ["Ronald Holshausen <ronald.holshausen@gmail.com>"]
edition = "2021"
description = "Standalone pact verifier for provider pact verification"
homepage = "https://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier_cli"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[features]
default = ["datetime", "xml", "plugins", "multipart", "junit"]
datetime = ["pact_models/datetime", "pact_verifier/datetime"] # Support for date/time matchers and expressions
xml = ["pact_models/xml", "pact_verifier/xml"] # support for matching XML documents
plugins = ["pact_verifier/plugins"]
multipart = ["pact_verifier/multipart"] # suport for MIME multipart bodies
junit = ["dep:junit-report"] # suport for MIME multipart bodies

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.70"
clap = { version = "4.2.1", features = ["cargo", "env"] }
env_logger = "0.10.0"
junit-report = { version = "0.8.2", optional = true }
log = "0.4.17"
maplit = "1.0.2"
pact_models = { version = "~1.1.12", default-features = false }
pact_verifier = { version = "~1.0.3", path = "../pact_verifier", default-features = false }
regex = "1.7.3"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots", "blocking", "json"] }
serde_json = "1.0.95"
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-core = "0.1.30"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }

[dev-dependencies]
expectest = "0.12.0"
trycmd = "0.14.13"
