[package]
name = "pact_verifier_ffi"
version = "0.0.1"
authors = ["Ronald Holshausen <uglyog@gmail.com>", "Matt Fellows <matt.fellows@onegeek.com.au>"]
edition = "2018"
description = "Pact verifier FFI for provider pact verification"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_verifier_ffi"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[dependencies]
libc = "0.2.76"
clap = "2.33.0"
pact_matching = { version = "0.8.0", path = "../pact_matching" }
pact_verifier = { version = "0.10.0", path = "../pact_verifier" }
simplelog = "0.8"
log = "0.4.8"
maplit = "1.0.2"
lazy_static = "1.4.0"
rand = "0.7.3"
regex = "1.3.9"
tokio = { version = "1", features = ["full"] }
env_logger = "0.7.1"
futures = "0.3"

[dev-dependencies]
quickcheck = "1"
expectest = "0.12.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.14.1"
