[package]
name = "pact_wasm"
version = "0.0.0"
authors = ["Ronald Holshausen <rholshausen@dius.com.au>"]
edition = "2018"
description = "WASM bindings for Pact models"
documentation = "https://docs.rs/pact_wasm"
homepage = "http://www.pact.io"
repository = "https://github.com/pact-foundation/pact-reference/blob/master/rust/pact_wasm"
readme = "README.md"
keywords = ["testing", "pact", "cdc"]
license = "MIT"
exclude = [
    "*.iml"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pact_models = { version =  "0.1", path = "../pact_models" }
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
console_log = { version = "0.2", features = ["color"] }
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
expectest = "0.12.0"
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
